--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "chalk": "^5.0.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5"
   }
