--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "node-dockerize",
-  "version": "1.0.0",
-  "description": "Dockerize a node js app",
-  "main": "app.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon app.js",
-    "build": "node app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "chalk": "^5.0.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-validator": "^6.14.1",
-    "helmet": "^5.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
-  }
+    "name": "node-dockerize",
+    "version": "1.0.0",
+    "description": "Dockerize a node js app",
+    "main": "app.js",
+    "type": "module",
+    "scripts": {
+        "start": "nodemon -L app.js",
+        "build": "node app.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "chalk": "^5.0.1",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.16"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "express-validator": "^6.14.1",
+        "helmet": "^5.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.3.5"
+    }
 }
