--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-        "start": "nodemon -L app.js",
+        "start": "nodemon app.js",
         "build": "node app.js"
     },
     "keywords": [],
